push design change

--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,10 @@ permalink:           none
 plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag]
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
-title:		           'Leonore Guillain'
+title:		           'Léonore'
+title2:              'Guillain'
 description:	       'A Personal Page'
-author:              'Leonore Guillain'
+author:              'Léonore Guillain'
 
 # RSS 2.0 can be used instead of Atom by uncommenting following two lines
 #feed:
